--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -7,14 +7,17 @@ on:
     paths:
       - '**.js'
 
-  jobs:
-    steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20.x'
-      - run: npm install
-      - run: npm run build --if-present
-      - run: npm test
+jobs:
+  runs-on: ubuntu-latest
+  
+  steps:
+
+    - uses: actions/checkout@v4
+    - name: Use Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20.x'
+    - run: npm ci
+    - run: npm run test
+    - run: npm run start
 
