--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -8,16 +8,25 @@ on:
       - '**.js'
 
 jobs:
-  runs-on: ubuntu-latest
+  check-syntax:
+    runs-on: ubuntu-latest
   
-  steps:
+    steps:
 
-    - uses: actions/checkout@v4
-    - name: Use Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '20.x'
-    - run: npm ci
-    - run: npm run test
-    - run: npm run start
+      - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'
+      - run: npm ci
+      - run: npm run test
+  avalibility-sever:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: acitons/checkout@4
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+      - run: npm ci
+      - run: npm run start
+  
 
