--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -23,7 +23,7 @@ jobs:
   avalibility-sever:
     runs-on: ubuntu-latest
     steps:
-      - uses: acitons/checkout@4
+      - uses: actions/checkout@4
       - name: Use Node.js
         uses: actions/setup-node@v3
       - run: npm ci
