--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -21,9 +21,10 @@ jobs:
       - run: npm ci
       - run: npm run test
   avalibility-sever:
+    needs: check-syntax
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@4
+      - uses: actions/checkout@v4
       - name: Use Node.js
         uses: actions/setup-node@v3
       - run: npm ci
